--- a/package.json
+++ b/package.json
@@ -16,13 +16,15 @@
     "address": "^1.0.3",
     "ant-design-vue": "^1.0.2",
     "axios": "^0.18.0",
+    "express": "^4.16.3",
     "js-cookie": "^2.2.0",
     "less": "^3.8.1",
     "less-loader": "^4.1.0",
     "nprogress": "^0.2.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "vuex-persistedstate": "^2.5.4"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
